Add Report Evaluation Modify ReportShowServlet reports/show.jsp

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -173,3 +173,22 @@ h3{
     display : inline-block;
     margin:20px;
 }
+
+#edit{
+    display : inline-block;
+    margin:10px;
+}
+
+#eval{
+    display : inline-block;
+    margin:10px;
+}
+
+.count{
+    border: 1px solid #cccccc;
+    padding: 5px;
+}
+
+#evaluated{
+    background-color:#ff6666;
+}
